# SozialeNetzwerke

./: .gitignore  README.md  all_tweets.db  auto_exec.py  main.py  point_system.py  pyproject.toml  query_db.py  requirements.txt  scrape_tweets.py  sunday_scrape.py  sunday_scrape_v2.py  twitter.db  twitter_scrape.py
databases_old_versions/: twitter.db
db_connect/: create_db.py  db_settings.py  twitter.db
db_requests/: clean_database.py  point_system_test_timofei.py  req_get_number_of_all_tweets.py  req_print_all_data.py
party_scrape/: create_db_party_scrape.py  db_settings_party_scrape.py  main.py  party_scrape.db  party_scrape.py  test.py
party_scrape/db_connect/: db_settings.py
party_scrape/db_requests/: clean_database.py  create_test_data.py  fill_parties_to_db.py  req_get_number_of_all_tweets.py  req_print_all_data.py  req_print_all_parties.py  req_print_all_tweets.py
pointsystem/: twitter_scrape.py
pointsystem/db_connect/: create_db.py  twitter.db
pointsystem/db_requests/: clean_database.py  point_system_test_timofei.py  req_get_number_of_all_tweets.py  req_print_all_data.py
