[tool.poetry]
name = "sozialenetzwerke"
version = "0.1.0"
description = ""
authors = ["Can Türk <cantuerk@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tweepy = "4.9.0"
lxml = "4.8.0"
SQLAlchemy = "1.4.36"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
